--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
