--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,24 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "antd": "^5.15.1",
     "aos": "^2.3.4",
     "horizon-ui": "^0.6.9",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-spinners": "^0.13.8",
+    "react-stickynode": "^4.1.1",
     "react-toastify": "^10.0.4",
     "react-ui": "^1.0.0-beta.32",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
