--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.11",
     "antd": "^5.15.1",
     "aos": "^2.3.4",
+    "gsap": "^3.12.5",
     "horizon-ui": "^0.6.9",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.18.0",
