--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,11 @@
     "horizon-ui": "^0.6.9",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.18.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.22.3",
+    "react-scroll-trigger": "^0.6.14",
     "react-spinners": "^0.13.8",
     "react-stickynode": "^4.1.1",
     "react-toastify": "^10.0.4",
