--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
@@ -19,10 +21,13 @@
     "@mui/material": "^5.15.11",
     "antd": "^5.15.1",
     "aos": "^2.3.4",
+    "classnames": "^2.5.1",
     "gsap": "^3.12.5",
     "horizon-ui": "^0.6.9",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.18.0",
+    "react-bootstrap": "^2.10.2",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
